@@ -83,6 +83,21 @@
   <launchable type="desktop-id">org.gnome.Calculator.desktop</launchable>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="46~alpha" date="2024-01-06" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 46.alpha</p>
+        <ul>
+          <li>Updated translations</li>
+          <li>Allow substring search in the unit selection drop-downs #338 (Lukáš Tyrychtr)</li>
+          <li>libsoup library usage update (Robert Roth)</li>
+          <li>appdata updates !158 (Sabri Ünal)</li>
+          <li>Ported some components to adwaita !159 (Pig)</li>
+          <li>Support Argentine Peso currency #370 (Pacho Ramos)</li>
+          <li>Reload conversion rates if in search-provider conversion fails !162 (Vladislav Yegorov)</li>
+          <li>Add Troy ounce (ozt) as new unit !109 (Gwyneth Morgan)</li>
+        </ul>
+      </description>
+    </release>
     <release version="45.0.2" date="2023-09-16" type="stable">
       <description>
         <p>Overview of changes in gnome-calculator 45.0.2</p>
