@@ -1,3 +1,14 @@
+Overview of changes in gnome-calculator 46.alpha
+    * Updated translations
+    * Allow substring search in the unit selection drop-downs #338 (Lukáš Tyrychtr)
+    * libsoup library usage update (Robert Roth)
+    * appdata updates !158 (Sabri Ünal)
+    * Ported some components to adwaita !159 (Pig)
+    * Support Argentine Peso currency #370 (Pacho Ramos)
+    * Reload conversion rates if in search-provider conversion fails !162 (Vladislav Yegorov)
+    * Add Troy ounce (ozt) as new unit !109 (Gwyneth Morgan)
+
+
 Overview of changes in gnome-calculator 45.0.2
     * Updated translations
 
